--- a/src/main/resources/ui/HiveViewTables.html
+++ b/src/main/resources/ui/HiveViewTables.html
@@ -43,8 +43,7 @@
         <script>
             $(document).ready(function () {
                 $.get("{{url_prefix}}/schemas/{{db}}", function (data) {
-                    let list = JSON.parse(data);
-                    $.each(list, function (i,v) {
+                    $.each(data, function (i,v) {
                         $('#list').append('<li><a href="{{url_prefix}}/ui/{{db}}/'+v+'">'+v+'</a></li>');
                     });
                 });
